--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     background-color: var(--almost-white);
 }
 
-body.menu-open::before {
+body.escurecer::before {
     content: "";
     position: fixed;
     height: 100vh;
@@ -45,20 +45,26 @@ body.menu-open::before {
 .header-mobile nav {
     position: fixed;
     background-color: var(--almost-white);
-    right: 0;
+    right: -19rem;
     top: 0;
     height: 100vh;
     width: 16rem;
     z-index: 999;
 
     display: flex;  
-    flex-direction:column;
+    flex-direction: column;
     padding: 1.5rem;
     gap: 1.5rem;
+
+    transition: 0.7s;
+}
+
+.header-mobile nav.abrir {
+    right: 0;
 }
 
 .header-mobile nav button {
-    margin-left: auto;
+    align-self: flex-end        ;
     margin-bottom: 4rem;    
 }
 
@@ -101,6 +107,7 @@ body.menu-open::before {
     font-weight: 700;
     font-size: 0.875rem;
     letter-spacing: 0.25rem;
+    line-height: 1.5rem;
 }
 
 .segunda-secao {
